# AI_Agent_Builds

./:  coffee_log.md  .gitignore  CHECKPOINT.md  COFFEE.md  COFFEE_MORNING_TEMPLATE.json  IDENTITY.md  MISSION_CONTROL_DATABASE_SCHEMA.md  MISSION_CONTROL_PRODUCT_SPEC.md  MISSION_CONTROL_TECHNICAL_ARCHITECTURE.md  MORNING_ROUTINE.md  ONBOARDING.md  PROFILE.md  README.md  Software_spec.md  USER.md  auth_service.py  data_access.py  db_setup.py  main.py  nginx.conf  producer.py
.openclaw/: workspace-state.json
Coffee_tracker/: COFFEE_LOG.md  COFFEE_TEMPLATES.md  coffee_log_package.yaml
app_morning_briefing/: MORNING_BRIEFING.md  MORNING_ROUTINE.md  morning_news_review.sh  morning_news_review_fixed.sh  setup_morning_briefing.sh  test_briefing.sh
app_music_genre_playlist/: README.md  STRUCTURE.txt  musicgen.py
mission-control/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
mission-control/app/: globals.css  layout.tsx  page.tsx
mission-control/app/cron/: page.tsx
mission-control/app/kanban/: page.tsx
mission-control/app/launchpad/: page.tsx
mission-control/app/projects/: page.tsx
mission-control/components/: cron-panel.tsx  github-panel.tsx  kanban-board.tsx  launches-panel.tsx  metric-card.tsx  project-list.tsx  sidebar.tsx  status-chip.tsx  topbar.tsx
mission-control/lib/: data.ts  types.ts
mission-control/prisma/: schema.prisma
music-genre-playlist/: README.md  STRUCTURE.txt  config.ini.example  install.sh  merge_playlists.py  musicgen.py  pyproject.toml  requirements.txt
(+9 files in other folders)
